--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
+  <strong>Author:</strong>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
