--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,8 +3,18 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
-  <strong>Author:</strong>
 </p>
-
+<p> 
+  <strong>Author:</strong>
+  <%= @book.author %>
+</p>
+<p>
+  <strong>Price:</strong>
+  <%= @book.price %>
+</p>
+<p>
+  <strong>Date Published:</strong>
+  <%= @book.published %>
+</p> 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
