finished user page and user book page

--- a/app/views/user_books/_form.html.erb
+++ b/app/views/user_books/_form.html.erb
@@ -13,13 +13,15 @@
 
   <div class="field">
     <%= form.label :user_id %>
-    <%= form.number_field :user_id %>
+    <%= form.select :user_id, User.order(:username).map { |user| [user.username, user.id] }, include_blank: true, id: "id_of_the_user_id_select_box" %>
   </div>
 
   <div class="field">
     <%= form.label :book_id %>
-    <%= form.number_field :book_id %>
+    <%= form.select :book_id, Book.order(:title).map { |book| [book.title, book.id] }, include_blank: true, id: "id_of_the_book_id_select_box" %>
   </div>
+
+
 
   <div class="actions">
     <%= form.submit %>
