--- a/app/views/user_books/index.html.erb
+++ b/app/views/user_books/index.html.erb
@@ -5,14 +5,15 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Book</th>
+      <th>Username</th>
+      <th>Book Title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @user_books.each do |user_book| %>
+
       <tr>
         <td><%= User.where(id: user_book.user_id).last.username %></td>
         <td><%= Book.where(id: user_book.book_id).last.title %></td>
@@ -30,8 +31,8 @@
 
 <br>
 
-<%= link_to 'Book index', books_path %>
+<%= link_to 'Book index', books_path%>
 
 <br>
 
-<%= link_to 'User index', user_path%>
+<%= link_to 'User index', users_path%>
